[gd_scene load_steps=4 format=3 uid="uid://7ejg1f0f55t6"]

[ext_resource type="Script" uid="uid://coqu6pf4bevqu" path="res://world_scenes/chunk/chunk.gd" id="1_2ne51"]
[ext_resource type="Script" uid="uid://cxonwpbfrm4jd" path="res://world_scenes/chunk/animLayer.gd" id="3_fbhgb"]
[ext_resource type="Texture2D" uid="uid://bhve82jlssdou" path="res://world_scenes/chunk/border.png" id="3_k01ex"]

[node name="Chunk" type="Node2D"]
script = ExtResource("1_2ne51")

[node name="backLayer" type="Sprite2D" parent="."]
visibility_layer = 2
z_index = -5
centered = false

[node name="mainLayer" type="Sprite2D" parent="."]
visibility_layer = 4
z_index = -1
centered = false

[node name="animLayer" type="Sprite2D" parent="."]
visibility_layer = 4
z_index = -1
centered = false
hframes = 3
script = ExtResource("3_fbhgb")

[node name="waterLayer" type="Sprite2D" parent="."]
visibility_layer = 16
z_index = 1
texture_repeat = 1
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collider0" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(19.2, 19.2)
scale = Vector2(0.4, 0.4)
rect = Rect2(-48, -48, 160, 160)

[node name="Border" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.129412)
z_index = 455
texture = ExtResource("3_k01ex")
centered = false

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
